<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_home_overview"
        android:icon="@drawable/item_menu_home_disable"
        android:title="@string/title_menu_home_overview"
        app:showAsAction="always"
        android:checked="false"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_chat_overview"
        android:icon="@drawable/item_menu_message_disable"
        android:title="@string/title_menu_message_overview"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_location_overview"
        android:icon="@drawable/item_menu_location_disable"
        android:title="@string/title_menu_location_overview"
        app:showAsAction="always"
        tools:ignore="UnusedAttribute" />
    <item
        android:id="@+id/menu_profile_overview"
        android:icon="@drawable/item_menu_profile_disable"
        android:title="@string/title_menu_profile_overview"
        app:showAsAction="always" />
</menu>